[package]
name = "wwww"
version = "0.1.0"
authors = ["David Irvine <david.irvine@maidsafe.net>"]
repository = "https://github.com/dirvine/self_encryption"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://metaquestions.me"


[dependencies]
conrod = { git = "https://github.com/PistonDevelopers/conrod" }
bitflags = "*"
clock_ticks = "0.0.6"
elmesque = "0.1.2"
json_io = "0.1.2"
piston = "0.1.3"
piston2d-graphics = "0.1.4"
num = "*"
rand = "*"
rustc-serialize = "*"
vecmath = "0.0.23"
find_folder = "0.1.1"
gfx = "0.6.*"
gfx_device_gl = "0.4.*"
piston-viewport = "0.1.0"
piston_window = "0.1.0"
piston2d-gfx_graphics = "0.1.22"
piston2d-opengl_graphics = "0.1.0"
pistoncore-glutin_window = "0.1.0"

