if(ENABLE_TEST)
 file(GLOB TestFiles *.cc)
 foreach(TestFile ${TestFiles} )
   get_filename_component(TestName ${TestFile} NAME_WE)
   add_executable(${TestName} ${TestFile})
   cotire(${TestName})
   # target_link_libraries(${TestName} wwww)
   add_test(NAME ${TestName} COMMAND $<TARGET_FILE:${TestName}>)
 endforeach()
endif()
